Added: Very basic, possibly buggy command added Add plugin.yml with permissions, and rtp command Add config.yml with maximum and minimum X and Z Add an alright readme file

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,5 +12,8 @@ commands:
     usage: Syntax error! Perhaps you meant /<command>?
 permissions:
   exortp.use:
-
+    description: Allows basic use of ExoRTP, such as randomly teleporting.
+    default: true
   exortp.admin:
+    description: Allows usage of ExoRTP's admin commands.
+    default: op
